Finish inline the paths documentation
